--- a/index.css
+++ b/index.css
@@ -1,10 +1,15 @@
 .eee {
 	font-size: 20px;
 }
+
 .zzz {
 	font-size: 30px;
 }
-.eee, .zzz {
-	line-height: 1.5;
+
+.ggg {
+	font-size: 35px;
+}
+.eee, .ggg, .zzz {
+	text-align: center;
 	font-family: Arial;
 }
