--- a/index.css
+++ b/index.css
@@ -1,3 +1,3 @@
-.eee .bbb { /*селектор выберет тег с классом bbb, который находится в теге с классом eee*/
+.eee h2 { /*селектор выберет тег h2, который находится в теге с классом eee*/
     color: red;
 }
