--- a/index.css
+++ b/index.css
@@ -1,3 +1,3 @@
-.eee h2 { /*селектор выберет тег h2, который находится в теге с классом eee*/
+.eee h2.bbb { /*селектор выберет тег h2 класса bbb, который находится в теге с классом eee*/
     color: red;
 }
