--- a/index.css
+++ b/index.css
@@ -1,3 +1,3 @@
-.eee h3.bbb { /*селектор выберет тег h3 класса bbb, который находится в теге с классом eee*/
+.eee p.bbb { /*селектор выберет тег p класса bbb, который находится в теге с классом eee*/
     color: red;
 }
