--- a/index.css
+++ b/index.css
@@ -1,3 +1,3 @@
-.eee p.bbb { /*селектор выберет тег p класса bbb, который находится в теге с классом eee*/
+.eee .bbb .kkk { /*селектор выберет класс kkk, родитель которого класс bbb, который находится в теге с классом eee*/
     color: red;
 }
