--- a/index.css
+++ b/index.css
@@ -1,3 +1,3 @@
-.eee .bbb .kkk { /*селектор выберет класс kkk, родитель которого класс bbb, который находится в теге с классом eee*/
+p.bbb { /*выберет абзацы с классом bbb*/
     color: red;
 }
