--- a/index.css
+++ b/index.css
@@ -1,3 +1,3 @@
-p .bbb { /*выберет элементы с классом bbb внутри абзацев*/
+.eee p.bbb { /*выберет абзацы с классом bbb внутри элемента с классом еее*/
     color: red;
 }
